Fix for making links have a higher color contrast to other text in blocks. (#2192)
The changes were based on the article  https://www.viget.com/articles/color-contrast/

Changes:
 - Link color has been  changed from #337ab7 to #107896.
According to https://webaim.org/resources/linkcontrastchecker/?fcolor=000000&bcolor=FFFFFF&lcolor=107896 (the "Link to Body Text" ratio is 4.14:1 and passes WCAG A test and "Link to Background" ratio is 5.06 and passes the 5.06:1 which satisfies WCAG AA test.)
- The TinyMce editor required new stylesheets to be created.

Fix for issue #1457

--- a/app/assets/stylesheets/variables/_colours.scss
+++ b/app/assets/stylesheets/variables/_colours.scss
@@ -11,7 +11,9 @@ $color-grey-darker: #333;
 $color-grey-light: #777;
 $color-grey-lighter: #999;
 $color-blue: #337ab7;
+$color-blue-alice-darkest: #107896;
 $color-muted: #CCC;
+
 
 /*
   Variables to define look and feel
@@ -33,7 +35,7 @@ $color-heading-text: $color-black;
 $color-navbar-text: $color-grey-light;
 $color-navbar-text-hover: $color-white;
 $color-navbar-text-disabled: $color-grey-darker;
-$color-link-text: $color-blue;
+$color-link-text: $color-blue-alice-darkest;
 $color-navbar-link-text: lighten($color-navbar-text, 15%);
 $color-org-navbar-links: $color-grey-light;
 $color-org-navbar-links-hover: $color-grey-darker;
